# Pixeler

./: .gitignore  CMakeLists.txt  CMakeOld.txt  README.md  TODO.md  main.cpp  pixeler.cpp
include/: pixMat.h
src/: pixMat.cpp
